--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
 
 <body>
     <div class="container">
+        <div id="up-btn"></div>
         <div class="dark-bg"></div>
         <header class="header">
             <div class="header__wrap">
@@ -40,12 +41,14 @@
                             <span></span>
                         </span>
                         <ul class="nav__list">
-                            <li class="nav__el"><a class="nav__link" href="">Main</a></li>
-                            <li class="nav__el"><a class="nav__link" href="">Skills</a></li>
-                            <li class="nav__el"><a class="nav__link" href="">About me</a></li>
-                            <li class="nav__el"><a class="nav__link" href="">Contacts</a></li>
+                            <li class="nav__el"><a class="nav__link" id="main" href="">Main</a></li>
+                            <li class="nav__el"><a class="nav__link" id="skills" href="">Skills</a></li>
+                            <li class="nav__el"><a class="nav__link" id="works" href="">Works</a></li>
+                            <li class="nav__el"><a class="nav__link" id="contacts" href="">Contacts</a></li>
                         </ul>
+                        <div class="lang mob"><a href="index.html" style = "opacity: .8">EN</a> <span class="lang__div"></span> <a href="RU/index.html">RU</a></div>
                     </nav>
+                    
                 </div>
 
                 <div class="header__main">
@@ -58,18 +61,18 @@
                                 <h1 class="header__title">Hi, my name<br> is Kostya</h1>
                             </div>
                             <div class="subtitle-wrap">
-                                <p class="header__subtitle">I make cool websites</p>
+                                <p class="header__subtitle">I love to make cool websites</p>
                             </div>
                         </div>
-                        <a href="#portfolio" class="header__button">View my work</a>
-                        <a href="#contacts" class="header__button">Get in touch</a>
+                        <a href="#portfolio" class="header__button" id="view-work">View my work</a>
+                        <a href="#contacts" class="header__button" id="get-in-touch">Get in touch</a>
                     </div>
                     <div class="header__image">
                         <span class="header-img-wrap"></span>
                         <img src="images/header/1.jpg" alt="" />
                     </div>
                 </div>
-                <div class="lang"><a href="#">EN</a> <span class="lang__div"></span> <a href="#">RU</a></div>
+                <div class="lang desc"><a href="index.html" style = "opacity: .8">EN</a> <span class="lang__div"></span> <a href="RU/index.html">RU</a></div>
             </div>
            
         </header>
