--- a/src/RU/index.html
+++ b/src/RU/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
 
-    <title>КОНСТНАНТИН</title>
+    <title>КОНСТАНТИН</title>
 </head>
 
 <body>
@@ -61,7 +61,7 @@
                                 <h1 class="header__title ru-header">Привет,<br> меня зовут Костя</h1>
                             </div>
                             <div class="subtitle-wrap">
-                                <p class="header__subtitle">Я делаю красивые сайты</p>
+                                <p class="header__subtitle">Мне нравится делать красивые сайты</p>
                             </div>
                         </div>
                         <a href="#portfolio" class="header__button" id="view-work">Портфолио</a>
@@ -80,7 +80,7 @@
 
         <section class="skills">
             <div class="title-wrap">
-                <h1 class="skills__title block-title">Что я умею</h1>
+                <h1 class="skills__title block-title ru-header">Что я умею</h1>
                 <span class="title-line"></span>
             </div>
             <div class="skills__list">
@@ -121,7 +121,6 @@
                     <span class="skill__desc">Умею себя организовывать и правильно распределять свое время. Люблю
                         работать в команде, легко схожусь с людьми. Беру на себя ответственность, всегда развиваюсь и не
                         боюсь сложностей.
-                        Always ready to solve problems and take on new challenges.</span>
                 </div>
             </div>
             </h1>
@@ -130,22 +129,22 @@
 
             <div class="portfolio__wrap">
                 <div class="title-wrap">
-                    <h1 class="portfolio__title block-title">selected works</h1>
+                    <h1 class="portfolio__title block-title ru-header">Мои работы</h1>
                     <span class="title-line"></span>
                 </div>
                 <div class="portfolio__works">
                     <div class="work">
                         <div class="work__img">
                             <img src="../images/portfolio/1.png" alt="">
-                            <a href="../projects/bouncy/index.html" target="_blank"><span class="work__over">View live
+                            <a href="../projects/bouncy/index.html" target="_blank"><span class="work__over">Cмотреть
                                     &nbsp;<span class='fas fa-external-link-alt'></span></a>
                         </div>
                         <div class="work__desc">
-                            <h4 class="work__title">BOUNCY - Web Development Agency</h4>
-                            <p>Fully responsive simple and clean digital agency home landing page. Several sliders,
-                                responsive mobile menu, forms and gallery. Lightweight and crossbrowser support.</p>
+                            <h4 class="work__title">BOUNCY - сайт веб-студии</h4>
+                            <p>Отзывчивый адаптивный сайт агенства веб-разработки. Содержит несколько слайдеров, блок
+                                отзывов, мобильное меню, галерею, формы обратной связи.</p>
                             <div class="work__buttons">
-                                <a href="../projects/bouncy/index.html" target="_blank" class="work__btn">View live</a>
+                                <a href="../projects/bouncy/index.html" target="_blank" class="work__btn">Cмотреть</a>
                                 <a href="../https://github.com/kpoden/Bouncy-IT-Company" target="_blank"
                                     class="work__btn work__btn--light">Github</a>
                             </div>
@@ -155,16 +154,15 @@
                         <div class="work__img">
                             <img src="../images/portfolio/2.png" alt="">
                             <a href="../projects/hairreplacement/index.html" target="_blank"><span
-                                    class="work__over">View
-                                    live &nbsp;<span class='fas fa-external-link-alt'></span></a>
+                                    class="work__over">Cмотреть &nbsp;<span class='fas fa-external-link-alt'></span></a>
                         </div>
                         <div class="work__desc">
-                            <h4 class="work__title">AVRASYA - Hair Transplantation Clinic</h4>
-                            <p>Hair transplantation clinic home page. Responsive design with mobile menu, gallery,
-                                popups and forms. </p>
+             
+                            <h4 class="work__title">AVRASYA - сайт клиники по пересадке волос</h4>
+                            <p>Сайт медицинской клиники с отзывчивым дизайном, мобильным меню, отзывчивой галереей,
+                                формами и всплывающими окнами. </p>
                             <div class="work__buttons">
-                                <a href="../projects/hairreplacement/index.html" target="_blank" class="work__btn">View
-                                    live</a>
+                                <a href="../projects/hairreplacement/index.html" target="_blank" class="work__btn">Cмотреть</a>
                                 <a href="../https://github.com/kpoden/AVRASYA---hair-replacement-clinic" target="_blank"
                                     class="work__btn work__btn--light">Github</a>
                             </div>
@@ -173,14 +171,14 @@
                     <div class="work">
                         <div class="work__img">
                             <img src="../images/portfolio/3.png" alt="">
-                            <a href="../projects/megadom/index.html" target="_blank"><span class="work__over">View live
+                            <a href="../projects/megadom/index.html" target="_blank"><span class="work__over">Cмотреть
                                     &nbsp;<span class='fas fa-external-link-alt'></span></a>
                         </div>
                         <div class="work__desc">
-                            <h4 class="work__title">Megadom - real estate agency</h4>
-                            <p>Real estate agency site, several pages, smooth animations, video slider, </p>
+                            <h4 class="work__title">Мегадом - агенство недвижимости</h4>
+                            <p>Сайт агенства недвижимости, адаптив не предусмотрен, видео слайдер, плавные анимации, блок отзывов, приятный дизайн.</p>
                             <div class="work__buttons">
-                                <a href="../projects/megadom/index.html" target="_blank" class="work__btn">View live</a>
+                                <a href="../projects/megadom/index.html" target="_blank" class="work__btn">Cмотреть</a>
                                 <a href="../https://github.com/kpoden/Megadom" target="_blank"
                                     class="work__btn work__btn--light">Github</a>
                             </div>
@@ -189,15 +187,14 @@
                     <div class="work" style="flex-direction: row-reverse;">
                         <div class="work__img">
                             <img src="../images/portfolio/4.png" alt="">
-                            <a href="../projects/dart/index.html" target="_blank"><span class="work__over">View live
+                            <a href="../projects/dart/index.html" target="_blank"><span class="work__over">Cмотреть
                                     &nbsp;<span class='fas fa-external-link-alt'></span></a>
                         </div>
                         <div class="work__desc">
-                            <h4 class="work__title">DART SERVICES - simple landing page</h4>
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
-                                quasi eligendi id corporis! Quo ullam, distinctio</p>
+                            <h4 class="work__title">DART SERVICES - легкий сайт современной компании</h4>
+                            <p>Универсальный сайт, адаптив не предусмотрен, несколько слайдеров, приятная цветовая гамма. </p>
                             <div class="work__buttons">
-                                <a href="../projects/dart/index.html" target="_blank" class="work__btn">View live</a>
+                                <a href="../projects/dart/index.html" target="_blank" class="work__btn">Cмотреть</a>
                                 <a href="../https://github.com/kpoden/DART-SERVICE" target="_blank"
                                     class="work__btn work__btn--light">Github</a>
                             </div>
@@ -206,62 +203,39 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="aboutme">
-            <h1 class="aboutme__title block-title">some facts about me</h1>
-            <div class="aboutme__main">
-                <div class="aboutme__img"><img src="http://placeimg.com/640/480/cats" alt=""></div>
-                <div class="aboutme__facts">
-                    <ul class="facts__list">
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">sit amet consectetur adipisicing elit. Officia squasi eligendi id corporis</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                    </ul>
-                    <ul class="facts__list">
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                        <li class="facts__item">Lorem ipsum dolor</li>
-                    </ul>
-                </div>
-            </div>
-        </section> -->
+
         <section class="contacts">
             <div class="contacts__wrap">
                 <div class="title-wrap">
-                    <h1 class="contacts__title block-title">get in touch</h1>
+                    <h1 class="contacts__title block-title ru-header">Связаться со мной</h1>
                     <span class="title-line"></span>
                 </div>
                 <div class="contacts__main">
                     <div class="forms-wrap">
-                        <p class="contacts__text">Here you can drop me a line...</p>
+                        <p class="contacts__text">Можете написать мне, буду рад...</p>
                         <div class="contacts__form">
                             <form method="post" action="send.php" id="form">
                                 <div class="input-wrap">
                                     <div class="input-field-wrap">
-                                        <input class="contacts__field" type="text" name="name" id="name">
-                                        <span class="input-field-name">Name*</span>
+                                        <input class="contacts__field form__field" type="text" name="name" id="name">
+                                        <span class="input-field-name">Имя</span>
                                     </div>
                                     <div class="input-field-wrap">
-                                        <input class="contacts__field" type="text" name="email" id="email">
+                                        <input class="contacts__field form__field" type="text" name="email" id="email">
                                         <span class="input-field-name">Email</span>
                                     </div>
                                 </div>
                                 <div class="textarea-field-wrap">
-                                    <textarea class="contacts__msg" name="message" id="message" cols="30" rows="10"
+                                    <textarea class="contacts__msg form__field" name="message" id="message" cols="30" rows="10"
                                         resizable="false"></textarea>
-                                    <span class="textarea-field-name">Message*</span>
+                                    <span class="textarea-field-name">Сообщение</span>
                                 </div>
                                 <input class="contacts__submit" type="submit" value="Send">
                             </form>
                         </div>
                     </div>
                     <div class="contacts__links">
-                        <p class="contacts__text">To contact me you can use these: </p>
+                        <p class="contacts__text">Либо использовать эти ссылки: </p>
                         <ul class="contacts__list">
                             <li class="contacts__item"><a href="https://github.com/kpoden" target="_blank"><i
                                         class="fab fa-github"></i> GitHub Page</a></li>
